# dependency-risk-profiler

./: .bandit.yml  .flake8  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  DEPENDENCY_SECURITY.md  ENHANCEMENTS.md  ENHANCEMENTS3.md  Improvements.md  MIGRATION_SUMMARY.md  PROJECT_STRUCTURE.md  PROMPT.md  README.md  SECURITY.md  TESTING_IMPLEMENTATION.md  TESTING_STANDARDS.md  cleanup_legacy.py  dependencies_sample.json  dependencies_trends.json  distribution_trends.json  index.html  install.bat  install.py  install.sh  integration_test.py  mkdocs.yml  mypy.ini  overall_sample.json  overall_trends.json  overall_viz.json  pyproject.toml  quickinstall.py  requirements_large.txt  security_trends.json  setup.cfg  setup.py  sitemap.xml  test_dependency_update.py  (+5 more)
.github/: README.md  code-scanning.yml  dependabot.yml
.github/allstar/: allstar.yaml  binary_artifacts.yaml  branch_protection.yaml  outside.yaml  scorecard.yaml  security.yaml
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  codeql.yml  custom-codeql.yml  docs.yml  release.yml  scorecard.yml
CHANGELOG/: index.html
CONTRIBUTING/: index.html
INFORMATION_SOURCES/: index.html
MIGRATION_SUMMARY/: index.html
SCORING/: index.html
backup_config/: mypy.ini
backup_legacy/: MANIFEST.in  setup.py
basic-usage/: index.html
configuration/: index.html
development/CLAUDE/: index.html
development/PROMPT/: index.html
development/RELEASE_PROCESS/: index.html
docs/: CHANGELOG.md  INFORMATION_SOURCES.md  MIGRATION_SUMMARY.md  README.md  SCORING.md  basic-usage.md  configuration.md  getting-started.md  index.md  installation.md
docs/development/: CLAUDE.md  RELEASE_PROCESS.md
docs/enhancement/: ENHANCEMENTS2.md  Improvements.md  README.md
docs/project_standards/: TESTING_IMPLEMENTATION.md  TESTING_STANDARDS.md
docs/security/: CODE_SIGNING.md  DEPENDENCY_SECURITY.md  SECURITY.md
enhancement/: index.html
enhancement/ENHANCEMENTS2/: index.html
enhancement/ENHANCEMENTS3/: index.html
enhancement/Improvements/: index.html
examples/: README.md  api_usage.py  demo.sh  distribution_trends.json  go.mod  overall_trends.json  package-lock.json  requirements.txt  secure_release_demo.py  security_trends.json  simple_test.py  trend_visualizer.html  trends_demo.py  visualize_trends.py
examples/data/: README.md  dependencies_trends.json  dependencies_viz.json  distribution_sample.json  security_sample.json
examples/data/trends/: README.md  dependencies_trends.json  distribution_trends.json  overall_trends.json
examples/fixtures/: README.md
examples/manifests/: README.md  go.mod  requirements.txt
examples/usage/: README.md  api_usage.py
examples/visualization/: README.md  trends_demo.py  visualize_trends.py
getting-started/: index.html
installation/: index.html
project_standards/TESTING_IMPLEMENTATION/: index.html
project_standards/TESTING_STANDARDS/: index.html
samples/: README.md  dependencies_trends.json
scripts/: README.md  install.bat  install.py  install.sh  install_allstar.sh  quickinstall.py
search/: search_index.json
security/CODE_SIGNING/: index.html
security/DEPENDENCY_SECURITY/: index.html
security/SECURITY/: index.html
src/dependency_risk_profiler/: __init__.py  __main__.py  analysis_helpers.py  async_http.py  config.py  models.py  utils.py
src/dependency_risk_profiler/analyzers/: __init__.py  base.py  common.py  golang.py  nodejs.py  python.py
src/dependency_risk_profiler/cli/: __init__.py  formatter.py  main.py  typer_cli.py
src/dependency_risk_profiler/community/: __init__.py  analyzer.py
src/dependency_risk_profiler/license/: __init__.py  analyzer.py
src/dependency_risk_profiler/parsers/: __init__.py  base.py  golang.py  nodejs.py  python.py  registry.py  toml.py
src/dependency_risk_profiler/scorecard/: __init__.py  branch_protection.py  dependency_update.py  maintained.py  security_policy.py  signed_commits.py
src/dependency_risk_profiler/scoring/: __init__.py  risk_scorer.py
src/dependency_risk_profiler/secure_release/: __init__.py  code_signing.py  github_actions_ci_cd.yaml  release_build.py  release_management.py
src/dependency_risk_profiler/supply_chain/: __init__.py  analyzer.py  graph.py  trends.py
src/dependency_risk_profiler/transitive/: __init__.py  analyzer.py  analyzer_enhanced.py
src/dependency_risk_profiler/vulnerabilities/: __init__.py  aggregator.py  aggregator_async.py  cache.py
test_dirs/express/: package.json
testing/: README.md  conftest.py
testing/fixtures/: README.md  mock_responses.py  sample_data.py
testing/integration/: integration_test.py  test_dependency_update.py  test_phase2.py  test_security_policy.py  test_trends.py  test_vuln_aggregator.py
testing/manifests/: README.md
testing/manifests/express/: package.json
testing/manifests/gin/: go.mod
testing/manifests/go-mod/: test_go.mod
testing/manifests/large/: requirements.txt
testing/projects/: README.md
testing/unit/: README.md  test_aggregator_async.py  test_analyzers_base.py  test_async_http.py  test_ci_configs.py  test_comprehensive_risk_scorer.py  test_comprehensive_vulnerability_aggregator.py  test_config.py  test_mypy_config.py  test_parsers.py  test_release_build.py  test_release_build_cli.py  test_scoring.py  test_toml_parser.py  test_toml_parser_comprehensive.py  test_vulnerability_aggregator_with_cache.py  test_vulnerability_cache.py
tests/: README.md  conftest.py  test_aggregator_async.py  test_async_http.py  test_ci_configs.py  test_comprehensive_risk_scorer.py  test_comprehensive_vulnerability_aggregator.py  test_config.py  test_config_env_vars.py  test_mypy_config.py  test_parsers.py  test_scoring.py  test_toml_parser.py  test_toml_parser_comprehensive.py  test_toml_parser_edge_cases.py  test_transitive_analyzer_enhanced.py  test_typer_cli.py  test_vulnerability_aggregator_with_cache.py  test_vulnerability_cache.py
tests/integration/: README.md  integration_test.py  test_dependency_update.py  test_phase2.py  test_security_policy.py  test_trends.py  test_vuln_aggregator.py
(+11 files in other folders)
