[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dependency-risk-profiler"
dynamic = ["version"]
description = "A tool to evaluate the health and risk of a project's dependencies beyond vulnerability scanning"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Security",
]
dependencies = [
    "requests>=2.32.2",  # Fixed CVE-2024-35195
    "packaging>=23.2",
    "colorama>=0.4.6;platform_system=='Windows'",
    "pyyaml>=6.0.1",
    "matplotlib>=3.7.0",  # For potential visualization
    "networkx>=2.8.8",    # For dependency graph analysis
    "cryptography>=42.0.0",  # For secure code signing, Fixed CVE-2023-50782 & others
    "urllib3>=2.2.2",     # Fixed CVE-2024-37891
    "jinja2>=3.1.5",      # Fixed CVE-2024-56201
    "certifi>=2024.7.4",  # Fixed CVE-2024-39689
    "werkzeug>=3.0.6",    # Fixed CVE-2024-49766, CVE-2024-49767
    "tomli>=2.0.1;python_version<'3.11'",  # TOML parsing (builtin in Python 3.11+)
    "pygments>=2.16.1",   # Fixed CVE-2023-41337
    "pillow>=10.2.0",     # Fixed CVE-2023-50447, CVE-2024-35219, etc.
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.0",
    "pytest-cov>=4.2.0",
    "pytest-benchmark>=4.0.0",  # For performance benchmark tests
    "black>=24.4.0",
    "isort>=5.13.2",
    "flake8>=7.0.0",
    "mypy>=1.9.0",
    "responses>=0.25.0",  # Added for HTTP mocking in tests
    "numpy>=2.2.4",  # For benchmark tests and percentile calculations
]

[project.urls]
Homepage = "https://github.com/username/dependency-risk-profiler"
Issues = "https://github.com/username/dependency-risk-profiler/issues"

[project.scripts]
dependency-risk-profiler = "dependency_risk_profiler.cli.main:main"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
markers = [
    "benchmark: marks tests as performance benchmarks",
]

[tool.setuptools]
packages = ["dependency_risk_profiler"]
package-dir = {"" = "src"}

[tool.setuptools.dynamic]
version = {attr = "dependency_risk_profiler.__version__"}