[build-system]
requires = ["setuptools>=69.0.2", "wheel>=0.42.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dependency-risk-profiler"
dynamic = ["version"]
description = "A tool to evaluate the health and risk of a project's dependencies beyond vulnerability scanning"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Security",
]
dependencies = [
    "requests>=2.32.2",  # Fixed CVE-2024-35195
    "packaging>=23.2",
    "colorama>=0.4.6;platform_system=='Windows'",
    "pyyaml>=6.0.1",
    "matplotlib>=3.7.0",  # For potential visualization
    "networkx>=2.8.8",    # For dependency graph analysis
    "cryptography>=42.0.0",  # For secure code signing, Fixed CVE-2023-50782 & others
    "urllib3>=2.2.2",     # Fixed CVE-2024-37891
    "jinja2>=3.1.5",      # Fixed CVE-2024-56201
    "certifi>=2024.7.4",  # Fixed CVE-2024-39689
    "werkzeug>=3.0.6",    # Fixed CVE-2024-49766, CVE-2024-49767
    "tomli>=2.0.1",  # TOML parsing (make available for all Python versions for testing)
    "pygments>=2.16.1",   # Fixed CVE-2023-41337
    "pillow>=10.2.0",     # Fixed CVE-2023-50447, CVE-2024-35219, etc.
    "typer>=0.9.0",       # CLI framework for better user experience
    "rich>=13.5.0",       # For rich terminal output and progress bars
    "aiohttp>=3.8.6",     # For async HTTP requests
    "httpx>=0.24.1",      # Modern HTTP client with sync and async support
    "pipdeptree>=2.13.0", # For enhanced Python transitive dependency analysis
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.2.0",
    "pytest-benchmark>=4.0.0",  # For performance benchmark tests
    "pytest-asyncio>=0.21.1",   # For testing async code
    "black>=24.4.0",
    "isort>=5.13.2",
    "flake8>=7.0.0",
    "mypy>=1.9.0",
    "responses>=0.25.0",        # For HTTP mocking in tests
    "aioresponses>=0.7.4",      # For mocking async HTTP requests
    "tomli>=2.0.1",  # TOML parsing/writing in tests (make available for all Python versions)
    "tomli-w>=1.0.0",           # For TOML writing in tests
    "pre-commit>=3.5.0",        # For pre-commit hooks
]

benchmark = [
    "numpy>=1.24.0",           # For benchmark tests and percentile calculations
]

visualization = [
    "graphviz>=0.20.1",        # For dependency graph visualization
    "python-igraph>=0.10.4",   # Alternative graph visualization
]

[project.urls]
Homepage = "https://github.com/your-organization/dependency-risk-profiler"
Issues = "https://github.com/your-organization/dependency-risk-profiler/issues"

[project.scripts]
dependency-risk-profiler = "dependency_risk_profiler.cli.typer_cli:main"
dependency-risk-profiler-legacy = "dependency_risk_profiler.cli.main:main"

[tool.black]
line-length = 88
target-version = ["py39"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
exclude = [
    "tests/",
    "venv/",
    "build/",
    "dist/",
    "setup.py"
]

[tool.pytest]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
markers = [
    "benchmark: marks tests as performance benchmarks",
    "asyncio: mark test to run using asyncio",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.setuptools]
packages = ["dependency_risk_profiler"]
package-dir = {"" = "src"}

[tool.setuptools.dynamic]
version = {attr = "dependency_risk_profiler.__version__"}

[tool.ruff]
target-version = "py39"
line-length = 88
exclude = ["tests/*", "**/tests/*"]
select = ["E", "F", "B", "I"]
ignore = ["E203"]