[options]
package_dir =
    = src

[options.packages.find]
where = src

[flake8]
max-line-length = 88
extend-ignore = E203
exclude = 
    .git,
    __pycache__,
    build,
    dist,
    venv,
    .venv,
    .tox,
    .mypy_cache,
    .pytest_cache,
    .eggs,
    *.egg,
    # Exclude test files with intentional issues
    tests/integration/test_security_policy.py,
    tests/integration/test_dependency_update.py,
    tests/integration/test_phase2.py,
    tests/test_comprehensive_vulnerability_aggregator.py,
    tests/test_comprehensive_risk_scorer.py,
    tests/test_vulnerability_aggregator_with_cache.py
per-file-ignores =
    # Allow assert statements in tests
    tests/*:S101,F401,W293,E501,E302,E303,F811,F841,W292
    # Allow import * in __init__.py files
    __init__.py:F401,F403